--- a/earthsystem-api/.gitignore
+++ b/earthsystem-api/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
 
@@ -29,3 +29,8 @@ build/
 
 ### VS Code ###
 .vscode/
+/mvnw.cmd
+/.mvn/
+/mvnw
+/earthsystem-api.iml
+/HELP.md
