--- a/earthsystem/.gitignore
+++ b/earthsystem/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
 
@@ -29,3 +29,8 @@ build/
 
 ### VS Code ###
 .vscode/
+/mvnw.cmd
+/earthsystem.iml
+/mvnw
+/HELP.md
+/.mvn/
