--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 
     <groupId>com.skrshop</groupId>
     <artifactId>manage</artifactId>
+    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>manage</name>
     <description>Demo project for Spring Boot</description>
