--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
+
+            <version>${hutool.version}</version>
         </dependencies>
     </dependencyManagement>
 </project>
