增加dozerMapper转换 以及AccountUser服务编写

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -58,7 +58,6 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.0.3</version>
         </dependency>
 
         <!--redis-->
@@ -74,6 +73,15 @@
             <version>3.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer-spring</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+        </dependency>
     </dependencies>
 
 
