--- a/earthsystem-api/pom.xml
+++ b/earthsystem-api/pom.xml
@@ -6,7 +6,6 @@
         <groupId>com.skrshop</groupId>
         <artifactId>manage</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.skrshop</groupId>
     <artifactId>earthsystem-api</artifactId>
@@ -23,6 +22,12 @@
         <dependency>
             <groupId>com.skrshop</groupId>
             <artifactId>common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
 
 
