--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     name: earth-system
   profiles:
     active: dev
-
 server:
   port: 8081
+  servlet:
+    context-path: /earth/system
+mybatis:
+  mapper-locations:  classpath*:mapper/**/*.xml
