--- a/mall/src/main/resources/application.yml
+++ b/mall/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 # application.yml
 spring:
   application:
-    name: earth-system
+    name: mall
   profiles:
     active: dev
 server:
   port: 8081
   servlet:
-    context-path: /skrshop/earthsystem
+    context-path: /skrshop/mall
 mybatis:
   mapper-locations:  classpath*:mapper/**/*.xml
