--- a/mall/pom.xml
+++ b/mall/pom.xml
@@ -27,6 +27,18 @@
         </dependency>
 
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.skrshop</groupId>
             <artifactId>common</artifactId>
         </dependency>
