增加guava apache-common-lang3工具包

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>earthsystem</module>
         <module>earthsystem-api</module>
         <module>mall</module>
+        <module>oauth</module>
     </modules>
 
     <dependencies>
