增加授权客户端模块

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>earthsystem-api</module>
         <module>mall</module>
         <module>oauth</module>
+        <module>oauthclient</module>
     </modules>
 
     <dependencies>
