增加auth模块以及redis模块

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,10 @@
         <module>earthsystem-api</module>
         <module>mall</module>
         <module>oauth</module>
+        <module>oauthcenter</module>
         <module>oauthclient</module>
+        <module>oauthserver</module>
+        <module>redis-support</module>
     </modules>
 
     <dependencies>
