增加tk.mybatis的封装模块 增加远程服务调用的判断以及获取返回值的工具类

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>oauthclient</module>
         <module>oauthserver</module>
         <module>redis-support</module>
+        <module>skrshop-tkmybatis</module>
     </modules>
 
     <dependencies>
