--- a/mall/pom.xml
+++ b/mall/pom.xml
@@ -27,16 +27,11 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <groupId>com.skrshop</groupId>
+            <artifactId>skrshop-tkmybatis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>2.1.5</version>
-        </dependency>
 
         <dependency>
             <groupId>com.skrshop</groupId>
