--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <module>oauthclient</module>
         <module>oauthserver</module>
         <module>redis-support</module>
-        <module>skrshop-tkmybatis</module>
+        <module>skrshop-mybatisplus</module>
     </modules>
 
     <dependencies>
