--- a/mall/src/main/resources/application-dev.yml
+++ b/mall/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
   logging:
     level:
       root: info
-      com.yh.mybatis.mapper: info
+      com.skrshop.mall.repo: trace
   cloud:
     nacos:
       discovery:
