--- a/earthsystem/src/main/resources/application-dev.yml
+++ b/earthsystem/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/skrshop?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=TRUE
+    url: jdbc:mysql://127.0.0.1:3306/skrshop-earth-system?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=TRUE
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: root
