--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -8,5 +8,5 @@ server:
   port: 8081
   servlet:
     context-path: /skrshop/earthsystem
-mybatis:
+mybatis-plus:
   mapper-locations:  classpath*:mapper/**/*.xml
