--- a/mall/src/main/resources/application.yml
+++ b/mall/src/main/resources/application.yml
@@ -8,5 +8,5 @@ server:
   port: 8082
   servlet:
     context-path: /skrshop/mall
-mybatis:
-  mapper-locations:  classpath*:mapper/**/*.xml
+mybatis-plus:
+    mapper-locations:  classpath*:mapper/**/*.xml
