异常处理等修改 增加authFilter

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,7 +8,6 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.skrshop</groupId>
     <artifactId>common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>common</name>
@@ -71,6 +70,14 @@
             <artifactId>java-jwt</artifactId>
             <version>3.6.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.11.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>net.sf.dozer</groupId>
