--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # application.yml
 spring:
   application:
-    name: earth-system
+    name: skrshop-earth-system
   profiles:
     active: dev
 server:
