--- a/oauthserver/pom.xml
+++ b/oauthserver/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>manage</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.skrshop</groupId>
+
     <artifactId>oauthserver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>oauthserver</name>
@@ -32,6 +32,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.skrshop</groupId>
+            <artifactId>common</artifactId>
         </dependency>
     </dependencies>
 
