--- a/oauthcenter/src/main/resources/application.yml
+++ b/oauthcenter/src/main/resources/application.yml
@@ -2,6 +2,10 @@
 spring:
   application:
     name: skrshop-oauth-center
+  mvc:
+    view:
+      prefix: classpath:/templates/
+      suffix: .html
   redis:
      database: 0
      host: 127.0.0.1
@@ -11,11 +15,6 @@ spring:
 
   profiles:
     active: dev
-  thymeleaf:
-    cache: false
-    prefix: classpath:/templates/
-    suffix: .html
-    mode: LEGACYHTML5
 server:
   port: 8083
   servlet:
@@ -28,5 +27,5 @@ mybatis-plus:
 skrshop:
   authority:
     security:
-      loginpage: "/index"
+      loginpage: "/index.html"
       loginTypeEnum: JSON
