验证登录重构

--- a/oauthcenter/src/main/resources/application.yml
+++ b/oauthcenter/src/main/resources/application.yml
@@ -40,4 +40,4 @@ skrshop:
           height: 40
           codeCount: 4
           lineCount: 0
-          url: "/skrshop/oauth/test/*"
+#          url: "/skrshop/oauth/test/*"
