--- a/oauthcenter/src/main/resources/application.yml
+++ b/oauthcenter/src/main/resources/application.yml
@@ -31,7 +31,7 @@ skrshop:
       loginpage: "/index.html"
       #登录的类型
       loginTypeEnum: JSON
-#      loginTypeEnum: REDIRECT
+      #      loginTypeEnum: REDIRECT
       #验证码配置
       code:
         #图形验证码配置
@@ -40,4 +40,7 @@ skrshop:
           height: 40
           codeCount: 4
           lineCount: 0
-#          url: "/skrshop/oauth/test/*"
+        #          url: "/skrshop/oauth/test/*"
+        sms:
+          enable: true
+          codeCount: 8
