--- a/oauthcenter/pom.xml
+++ b/oauthcenter/pom.xml
@@ -46,6 +46,19 @@
 
         <dependency>
             <groupId>com.skrshop</groupId>
+            <artifactId>earthsystem-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-core</artifactId>
+            <version>1.1.6.RELEASE</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.skrshop</groupId>
             <artifactId>redis-support</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
