--- a/oauthcenter/pom.xml
+++ b/oauthcenter/pom.xml
@@ -62,15 +62,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <!-- oauth2 -->
+        <!-- security -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>com.skrshop</groupId>
+            <artifactId>security-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
