--- a/oauthcenter/src/main/resources/application.yml
+++ b/oauthcenter/src/main/resources/application.yml
@@ -28,22 +28,19 @@ skrshop:
   authority:
     oauth2:
       storeType: jwt
-    security:
       #登录的请求页面
-      loginpage: "/index.html"
+      loginpage: "/login.html"
       #登录的类型
-      loginTypeEnum: JSON
-      #      loginTypeEnum: REDIRECT
+      #loginTypeEnum: REDIRECT
       #验证码配置
       code:
-        #图形验证码配置
         image:
           enable: true
           width: 160
           height: 40
           codeCount: 4
           lineCount: 0
-        #          url: "/skrshop/oauth/test/*"
-        sms:
-          enable: true
-          codeCount: 8
+        #url: "/skrshop/oauth/test/*"
+      sms:
+        enable: true
+        codeCount: 8
