--- a/oauthcenter/pom.xml
+++ b/oauthcenter/pom.xml
@@ -61,6 +61,14 @@
             <artifactId>security-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- oauth2 -->
+        <dependency>
+            <groupId>com.skrshop</groupId>
+            <artifactId>oauth-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
