--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.9</version>
             </dependency>
+            <dependency>
+                <groupId>com.skrshop</groupId>
+                <artifactId>redis-support</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
