--- a/oauthclient/pom.xml
+++ b/oauthclient/pom.xml
@@ -30,6 +30,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- oauth2 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
