自定义jwt产生方法

--- a/cloud-gateway/src/main/resources/application-dev.yml
+++ b/cloud-gateway/src/main/resources/application-dev.yml
@@ -12,6 +12,8 @@ spring:
         #iw: 2323
 management:
   endpoints:
+    gateway:
+      enabled: true
     web:
       exposure:
         include: "*"
