--- a/oauthcenter-api/pom.xml
+++ b/oauthcenter-api/pom.xml
@@ -7,10 +7,9 @@
         <artifactId>manage</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-   
-    <artifactId>earthsystem-api</artifactId>
+    <artifactId>oauthcenter-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>earthsystem-api</name>
+    <name>oauthcenter-api</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -18,6 +17,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.skrshop</groupId>
@@ -29,8 +32,17 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
