--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -1,9 +1,29 @@
 # application.yml
 spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/skrshop-earth-system?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=TRUE
+    hikari:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: root
+      password: root
   application:
     name: skrshop-earth-system
-  profiles:
-    active: dev
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        #  指定namespace
+        # namespace: 04a067aa-178c-4fee-bc97-df5a6a4a23ff
+        #指定集群名称
+        cluster-name: NJ
+        #metadata:
+        #ins: 2
+        #iw: 2323
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 server:
   port: 8084
   servlet:
