--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -30,6 +30,7 @@ server:
     context-path: /skrshop/earthsystem
 mybatis-plus:
   mapper-locations:  classpath*:mapper/**/*.xml
+  typeEnumsPackage: com.skrshop.skrshoptkmybatis.handler
 
 feign:
   client:
