增加mybatis枚举转换器

--- a/skrshop-mybatisplus/src/main/resources/application.yml
+++ b/skrshop-mybatisplus/src/main/resources/application.yml
@@ -1,2 +1,2 @@
-mybatis:
-  type-handlers-package: com.skrshop.skrshoptkmybatis.handler
+mybatis-plus:
+  typeEnumsPackage: com.skrshop.skrshoptkmybatis.handler
