被依赖的jar包的yml文件生效 放在config目录下即可

--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -30,8 +30,8 @@ server:
     context-path: /skrshop/earthsystem
 mybatis-plus:
   mapper-locations:  classpath*:mapper/**/*.xml
-  configuration:
-    default-enum-type-handler: com.skrshop.skrshoptkmybatis.handler.EnumCodeTypeHandler
+#  configuration:
+#    default-enum-type-handler: com.skrshop.skrshoptkmybatis.handler.EnumCodeTypeHandler
 feign:
   client:
     config:
