--- a/skrshop-mybatisplus/src/main/resources/config/application.yml
+++ b/skrshop-mybatisplus/src/main/resources/config/application.yml
@@ -1,3 +1,3 @@
 mybatis-plus:
   configuration:
-    default-enum-type-handler: com.skrshop.skrshoptkmybatis.handler.EnumCodeTypeHandler
+    default-enum-type-handler: com.skrshop.skrshoptkmybatis.handler.AutoEnumTypeHandler
