--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <module>cloud-app-gateway</module>
         <module>mall-resource</module>
         <module>security-core</module>
+        <module>support-es</module>
+        <module>support-netty</module>
     </modules>
 
     <dependencies>
