--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <modules>
+        <module>eureka-server</module>
         <module>common</module>
         <module>earthsystem</module>
         <module>earthsystem-api</module>
