--- a/mall/src/main/resources/application.yml
+++ b/mall/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: root
       password: root
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: root
   cloud:
      nacos:
       discovery:
