--- a/mall/pom.xml
+++ b/mall/pom.xml
@@ -32,6 +32,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.skrshop</groupId>
+            <artifactId>redis-support</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.skrshop</groupId>
