feat 公共返回实体类增加success error 快捷生成方法

--- a/earthsystem/src/main/resources/application.yml
+++ b/earthsystem/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 # application.yml
 spring:
+  profiles:
+    active: dev
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/skrshop-earth-system?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=TRUE
     hikari:
